# minicraft

./: CMakeLists.txt  Makefile  README.md  cleanup.sh
src/: TODO.md  constants.c  constants.h  main.c  utils.c  utils.h
src/app/: app.c  app.h
src/entity/: entity.c  entity.h
src/entity_pool/: entity_pool.c  entity_pool.h  game_state.h
src/hud/: hud.c  hud.h
src/objects/: bullet.c  bullet.h  cactus.c  cactus.h  coin.c  coin.h  monster.c  monster.h
src/player/: player.c  player.h
src/renderer/: drawing_context.h  renderer.c  renderer.h
src/spawner/: spawner.c  spawner.h  spawner_coin.c  spawner_coin.h  spawner_monster.c  spawner_monster.h
